# org-governance

./: .gitignore  AGENTS.md  DISCUSSION_PROMPT.md  PHASE_2_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  README.md  TRANSFER_NOTES.md  dashboard-design.md  package-lock.json  package.json
.github/workflows/: reusable-build-test.yml  reusable-lint.yml  reusable-security.yml
agent-memory-banks/: README.md  compliance-checker-memory.md  governance-monitor-memory.md  report-processor-memory.md  standards-updater-memory.md
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AgentStatus.tsx  DashboardCard.tsx  Sidebar.tsx
docs/: adoption-guide.md  llm-cli-setup.md  memory-bank-comparison.md
github-settings/: branch-protection-rules.yaml
hooks/: pre-commit
mcp/: README.md
mcp-server/: README.md  index_docs.py  pyproject.toml  setup.sh
mcp-server/src/: recommendations.py  reporting.py  search.py  server.py
mcp-server/tests/: test_basics.py
memory-bank/: activeContext.md  agent-logbook.md  productContext.md  progress.md  projectbrief.md  systemContext.md
scripts/: agent-status.py  create-journal.py  demo_agent_mcp.py  onboard-repo.sh  sync-branch-protection.ts  validate-memory-bank.sh
standards/: code-markers.md  conventional-commits.md  memory-bank-format.md  multi-agent-protocols.md  recommended-extensions.md
templates/: pull-request-template.md
workflows/: ci-cd-standards.md  conversation-journaling.md  git-branching-strategy.md  pr-review-guidelines.md  pre-commit-hook-setup.md
(+8 files in other folders)
