[project]
name = "governance-mcp-server"
version = "0.1.0"
description = "MCP Server for Organizational Governance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "fastapi",
    "uvicorn",
    "langchain",
    "chromadb",
    "openai",
    "tiktoken"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/governance_mcp"]
